--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "project-euler",
     "version": "0.0.1",
-    "description": "",
+    "description": "My solutions to Project Euler problems",
     "repository": {
         "url": "https://github.com/oathompsonjones/Project-Euler.git"
     },
@@ -18,10 +18,11 @@
     "author": "oathompsonjones",
     "license": "MIT",
     "devDependencies": {
-        "@oathompsonjones/eslint-config": "^1.2.0",
-        "@oathompsonjones/ts-config": "^0.0.31",
-        "@types/node": "^20.12.12",
-        "typescript": "^5.4.5",
-        "vitest": "^1.6.0"
-    }
+        "@oathompsonjones/eslint-config": "^1.5.3",
+        "@oathompsonjones/ts-config": "^0.0.35",
+        "@types/node": "^22.5.4",
+        "typescript": "^5.5.4",
+        "vitest": "^2.0.5"
+    },
+    "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
