--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,3 @@
 {
-    "extends": "@oathompsonjones/ts-config",
-    "compilerOptions": {
-        "outDir": "build",
-        "rootDir": "src"
-    },
-    "include": [
-        "src/**/*"
-    ]
+    "extends": "@oathompsonjones/ts-config"
 }
