--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        node: [14.x, 18.x, 20.x]
+        node: [20.x]
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
