--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
     "repository": {
         "url": "https://github.com/oathompsonjones/Project-Euler.git"
     },
-    "main": "./build/index.js",
-    "types": "./build/index.d.ts",
-    "exports": "./build/index.js",
+    "main": "./build/run.js",
     "type": "module",
     "scripts": {
         "lint": "eslint .",
         "test": "vitest run",
         "build": "tsc --project tsconfig.build.json",
-        "start": "node ."
+        "start": "node build/run.js"
     },
     "author": "oathompsonjones",
     "license": "MIT",
@@ -21,7 +19,7 @@
         "@oathompsonjones/eslint-config": "^1.5.4",
         "@oathompsonjones/ts-config": "^0.0.35",
         "@types/node": "^22.5.4",
-        "typescript": "^5.5.4",
+        "typescript": "^5.6.2",
         "vitest": "^2.0.5"
     },
     "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
